fixes for location dropdown and various IE fixes (including some z-index bug fixes)
git-svn-id: http://svn.localprojects.net/gam2@478 befef031-aaeb-48d0-b70f-681328309d3d

--- a/trunk/static/css/ie/tc.gam.ie7.css
+++ b/trunk/static/css/ie/tc.gam.ie7.css
@@ -10,20 +10,34 @@ input[type=button].rounded-button,
 input[type=submit].rounded-button,
 div.seafloor input.ft-search-btn { padding-left: 0px; padding-right: 0px; }
 
+div.seafloor input.ft-search-field { padding-top: 12px; padding-bottom: 4px; /*height: 40px;*/ }
+
 a span.sm-arrow-forward,
 a span.sm-arrow-back { position: relative; top: -3px; }
 
-ul.navbar li.search input[type=submit] { padding-left: 0; padding-right: 0; }
+ul.navbar li.search input[type=submit] { padding-left: 0; padding-right: 0;  }
 
 
 /* home page */
+.continent.home .splash { z-index:5; }
+.continent.home .headlands .splash .top-pane div.idea-input textarea.idea { position: relative; width: 285px; right: 3px; }
 .continent.home .headlands .splash .step-three.projects-pane a.see-more { margin-bottom: 10px; }
+.continent.home .top-pane { overflow: visible; position: relative;}
+.continent.home .splash .row-3 { position: absolute; }
+.continent.home input.location-hood-enter { margin-left: 0; position: absolute;}
+.continent.home .location-hood-list { }
+.continent.home .info-input { height: auto; }
+.continent.home .info-input .east { height: 500px; }
+
+.continent.home .midlands div.why-use li { clear:both; }
+.continent.home .midlands div.why-use li .text { float: left; margin-left: 0; }
 
 
 /* create page */
 .continent.create .headlands > .east > .box { float: right; }
-
-
+.continent.create .midlands .step.location .row-3 { position: relative; }
+.continent.create .midlands .step.location input.location-hood-enter { position: absolute; }
+.continent.create .midlands .step.location .location-hood-list { position: absolute; top: 40px; } 
 
 /* search results page */
 .continent.search-results div.location-hood-list { margin-left: 4px;}
