--- a/trunk/static/css/tc.gam.main.css
+++ b/trunk/static/css/tc.gam.main.css
@@ -46,7 +46,7 @@ ul.navbar li.news-about { margin-left: 32px; margin-right: 10px; }
 ul.navbar li.news-about a { margin-right: 24px; font-size: 11px; line-height: 1; display: block; float: left; margin-top: 9px; }
 ul.navbar li.search {  }
 ul.navbar li.search input { border: 1px solid #454141; float: left; margin-top: 1px; font-family: "ff-din-web-1","ff-din-web-2", "Franklin Gothic Medium", Helvetica, Arial, sans-serif;}
-ul.navbar li.search input[type=text] { width: 164px; margin-right: 6px; background-color: transparent; color: #736b6d; font-size:11px; line-height:1; padding: 4px 6px 6px;}
+ul.navbar li.search input[type=text] { width: 164px; margin-right: 6px; background-color: transparent; color: #736b6d; font-size:11px; line-height:1; padding: 4px 6px 6px; font-style: normal;}
 ul.navbar li.search input[type=text]:focus { background-color: #302b2c; border-color:#C9B577; color: #cab577; }
 ul.navbar li.search input[type=submit] { background-color: #302b2c; color: #cab577; font-size:14px; line-height:1; padding: 0 7px 4px; height: 26px; letter-spacing: 0.5px; font-weight:normal;}
 ul.navbar li.search input[type=submit]:hover { color: #302b2c; background-color: #cab577; border-color:#C9B577; }
@@ -894,13 +894,14 @@ div.seafloor input.ft-search-btn { font-size: 22px; padding: 1px 12px 3px; heigh
 
 /* location hood list */
 div.location-hood-list { 
-	position:absolute; padding: 8px; margin-top:2px; background-color:#fff; 
+	position:absolute; padding: 8px 0; margin-top:2px; background-color:#fff; z-index: 10001;
 	border:1px solid #B9B8B6; font-size: 18px; line-height: 28px;
 	-webkit-transition: 100ms ease-in;  -moz-transition: 100ms ease-in; -o-transition: 100ms ease-in; transition: 100ms ease-in;
 	-moz-border-radius: 2px; -webkit-border-radius: 2px; -khtml-border-radius: 2px; border-radius: 2px;
 	}
 div.location-hood-list:hover { -webkit-box-shadow: 1px 1px 4px #cfcecc; -moz-box-shadow: 1px 1px 4px #cfcecc; box-shadow: 1px 1px 4px #cfcecc; }
-div.location-hood-list a{ }
+div.location-hood-list li { display: block; z-index: 10002; }
+div.location-hood-list a { padding: 0 8px; display: block; }
 div.location-hood-list a:hover{ background-color:#cfcecc; }
 div.location-hood-list li.selected a{ background-color:#cfcecc; }
 div.location-hood-list a span{ font-weight:bold; }
@@ -963,19 +964,19 @@ div.continent.home .headlands .splash .top-pane .step-two div.info-input .row.ro
 div.continent.home .headlands .splash .top-pane .step-two div.info-input label { display: block; float: left; /*margin-left: 10px;*/ font-size: 18px; line-height: 18px; color: #55504b; }
 div.continent.home .headlands .splash .top-pane .step-two div.info-input label .holder { filter:alpha(opacity=80); -moz-opacity:0.8; -khtml-opacity: 0.8; opacity: 0.8; }
 div.continent.home .headlands .splash .top-pane .step-two div.info-input input.location-hood-enter { width: 350px; float: none; }
-div.continent.home .headlands .splash .top-pane .step-two div.info-input div.location-hood-list { width: 350px; top: 37px; left: 0; }
+div.continent.home .headlands .splash .top-pane .step-two div.info-input div.location-hood-list { width: 366px; top: 38px; left: 0; }
 div.continent.home .headlands .splash .top-pane .step-two div.info-input span.error { display: block; margin-top: 6px; color: #e53224; font-size: 11px; line-height: 11px; font-style: italic; }
 
 div.continent.home .headlands .splash .top-pane .idea-processing div.console { width: 600px; }
 
 	/* splash project cards outer area */
 div.continent.home .headlands .splash  .projects-pane { position: absolute; height: 487px; width: 628px; bottom:0px; left: 35px; z-index: 1; color: #3d3a36;}
-div.continent.home .headlands .splash  .projects-pane h2 { height: 50px; margin-left: 9px; color: #3d3a36; width:340px; }
-div.continent.home .headlands .splash  .projects-pane h2 span.text { 
-	font-size: 16px; line-height: 16px; text-transform: uppercase; font-weight: bold; padding: 2px 57px 2px 9px; position: relative; top: 10px;
-	background-color: transparent; background: rgb(255, 255, 255); background: rgba(255, 255, 255, 0.7);
+div.continent.home .headlands .splash  .projects-pane h2 { height: 50px; margin-left: 9px; color: #3d3a36; width:285px; position: relative; }
+div.continent.home .headlands .splash  .projects-pane h2 .text { 
+	font-size: 16px; line-height: 16px; text-transform: uppercase; font-weight: bold; padding: 3px 0 4px 9px; position: relative; top: 12px;
+	background-color: transparent; background: rgb(255, 255, 255); background: rgba(255, 255, 255, 0.7); display: block;
 	}
-div.continent.home .headlands .splash .projects-pane h2 a.ca-btn {float:right; width: 88px; height:50px; background: url(../images/button_seeAllProjects.png) center right no-repeat transparent; position: relative; left: -50px; }
+div.continent.home .headlands .splash .projects-pane h2 a.ca-btn {float:right; width: 88px; height:50px; background: url(../images/button_seeAllProjects.png) center right no-repeat transparent; position: absolute; right: -8px; top: -3px;}
 div.continent.home .headlands .splash .projects-pane div.project-cards { position: absolute; bottom: 0; width: 628px; height: 440px; background: url(../images/bg_holdingSign.png) top left no-repeat transparent; }
 
 	/* splash project cards inner area */
@@ -1255,7 +1256,7 @@ div.continent.create .midlands .step.location .row.row-3 { margin-left: 40px; }
 div.continent.create .midlands .step.location label { display: block; float: left; margin-left: 10px; font-size: 21px; line-height: 21px; }
 div.continent.create .midlands .step.location label .holderWrap { top: 1px; }
 div.continent.create .midlands .step.location input.location-hood-enter { width: 419px; float: none; }
-div.continent.create .midlands .step.location div.location-hood-list { width: 419px; /*position:static;*/	}
+div.continent.create .midlands .step.location div.location-hood-list { width: 435px; /*position:static;*/	}
 
 div.continent.create .midlands .step.check { margin-top: 0px; }
 div.continent.create .midlands .step.check h3 { font-size: 18px; font-weight: bold; line-height: 18px; height: 18px; margin-top: 32px; margin-bottom: 12px; text-transform: uppercase; }
@@ -1486,7 +1487,7 @@ div.continent.tou .midlands div.standout strong { float: left; background: url(.
 
 /* Search Results */
 div.continent.search-results { }
-div.continent.search-results .headlands form.search-results-header { min-height: 60px; width: 805px; }
+div.continent.search-results .headlands form.search-results-header { min-height: 70px; width: 805px; }
 div.continent.search-results .headlands label { display: block; font-size: 16px; line-height: 1; margin-bottom: 8px; }
 div.continent.search-results .headlands input[type="text"] { font-size: 22px; float: left; line-height: 1; padding: 5px 8px 6px; margin-top: 0; margin-bottom: 0; height: 30px; }
 div.continent.search-results .headlands .search-terms-container { float: left; position: relative; }
@@ -1516,7 +1517,7 @@ div.continent.search-results .headlands .tabs .tab.active {
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#f9f9f9',GradientType=0 );
 	}
 div.continent.search-results .headlands .tabs .tab.active:hover a { cursor: default; }
-div.continent.search-results div.location-hood-list { left: 384px; top: 66px; width: 233px; z-index:100; }
+div.continent.search-results div.location-hood-list { left: 384px; top: 66px; width: 249px; z-index:100; }
 
 div.continent.search-results .results-box .hd { margin: 0 20px 8px; height: 30px; clear:both; }
 div.continent.search-results .results-box .hd h2 { float: left; text-transform: uppercase; }
